[gd_scene load_steps=2 format=3 uid="uid://63w0jy8olmjq"]

[ext_resource type="Script" path="res://src/file_select.gd" id="1_4cen2"]

[node name="FileSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4cen2")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
offset_top = 64.0
offset_right = 1152.0
offset_bottom = 576.0

[node name="FileList" type="VBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="NewButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.943
anchor_top = 0.898
anchor_right = 0.943
anchor_bottom = 0.898
offset_left = -30.3361
offset_top = -29.9041
offset_right = 29.6639
offset_bottom = 30.0959
text = "New"
metadata/_edit_use_anchors_ = true

[node name="FilenameInput" type="LineEdit" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -288.0
offset_top = -15.0
offset_right = 288.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Filename"
virtual_keyboard_type = 6

[node name="HBoxContainer" type="HBoxContainer" parent="FilenameInput"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 27.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="ConfirmButton" type="Button" parent="FilenameInput/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Ok"

[node name="CancelButton" type="Button" parent="FilenameInput/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cancel"
